# clean

./: .gitignore  .mcp.json  CHECKLIST.md  CLAUDE.md  HERA.md  LICENSE  README.es.md  README.md  ROADMAP_LIMPIEZA.md  ROADMAP_MULTIPLATAFORMA.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/skills/cobe-globe/: SKILL.md  reference.md
.claude/skills/diagnose/: SOURCE.md
.claude/skills/frontend-design/: SOURCE.md
.claude/skills/grill-me/: SOURCE.md
.claude/skills/shadcn/: SOURCE.md
.claude/skills/skill-creator/: SOURCE.md
.claude/skills/systematic-debugging/: SOURCE.md
.claude/skills/vercel-composition-patterns/: SOURCE.md
.claude/skills/web-design-guidelines/: SKILL.md  SOURCE.md
.claude/skills/webapp-testing/: SOURCE.md
.github/workflows/: build-macos.yml  build-windows.yml  ci.yml  pages.yml  release.yml
.playwright-mcp/: page-2026-06-17T18-21-53-953Z.yml
docs/: INSTALACION.md  INSTALL.md  README.md
extras/: finder-comprimir-limpio.sh
landing/: build-en.mjs  build-en.py  descargas.html  donar.html  index.html  privacidad.html  terminos.html
landing/en/: descargas.html  donar.html  index.html  privacidad.html  terminos.html
plans/20260721 - in-app-auth-payments/: 20260721 - in-app-auth-payments.md
scripts/: bootstrap.sh  build-fonts.mjs  build-themes.mjs  release.mjs  setup-agent-skills.ts  tsconfig.json
src/: App.tsx  fonts.css  index.css  main.tsx  themes.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apps.rs  cache.rs  devclean.rs  diskwatch.rs  dsstore.rs  duplicates.rs  lib.rs  main.rs  memory.rs  network.rs  platform.rs  scanner.rs  scheduler.rs  snapshots.rs  storage.rs  subscribe.rs  system.rs  tray.rs
src/components/: Globe.tsx  app-sidebar.tsx  clean-overlay.tsx  cleanup-hero.tsx  coming-soon.tsx  donate-dialog.tsx  donate-panel.tsx  hero-banner.tsx  language-provider.tsx  network-monitor.tsx  os-provider.tsx  processes-panel.tsx  scan-overlay.tsx  security-globe.tsx  sidebar-promo.tsx  theme-provider.tsx  update-bell.tsx  update-notifier.tsx  updates-provider.tsx
src/components/ui/: card.tsx  scroll-area.tsx  sonner.tsx
src/data/: changelog.ts
src/hooks/: use-cached-resource.ts  use-network-stats.ts  use-system-stats.ts
src/lib/: api.ts  clean-report.ts  config.ts  format.ts  links.ts  nav.ts  themes.ts
src/pages/: account.tsx  apps.tsx  cache.tsx  dashboard.tsx  dev.tsx  dsstore.tsx  duplicates.tsx  explorer.tsx  memory.tsx  scheduler.tsx  settings.tsx  snapshots.tsx  storage.tsx
src/styles/: materials.css  skin-hera.css  skin-zeus.css
