[package]
name = "macup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binario con el nombre del producto para que el proceso (dock/Force Quit) sea
# "ZodHubClean" también en `tauri dev`, no solo en el .app empaquetado.
[[bin]]
name = "ZodHubClean"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

# Actualizaciones automáticas (escritorio). `updater` descarga, verifica la firma
# e instala la nueva versión; `process` permite reiniciar la app tras actualizar.
[target.'cfg(desktop)'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

