[package]
name = "macup"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binario con el nombre del producto para que el proceso (dock/Force Quit) sea
# "ZodHubCleanPC" también en `tauri dev`, no solo en el .app empaquetado.
[[bin]]
name = "ZodHubCleanPC"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
# Papelera del sistema (macOS/Windows/Linux) en vez de osascript+Finder.
trash = "5"
# SHA-256 en proceso, en vez de depender del binario `shasum` de macOS.
sha2 = "0.10"
# Cliente HTTP para la suscripción voluntaria a novedades (única salida de datos
# de la app). Ya venía en el árbol vía el plugin del updater; rustls evita
# depender de OpenSSL en los tres sistemas.
# En reqwest 0.13 la feature se llama "rustls" (antes "rustls-tls").
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }

# Actualizaciones automáticas (escritorio: macOS/Windows/Linux, no móvil).
# Se usa cfg(not(android/ios)) —que Cargo SÍ entiende al resolver dependencias—
# en vez de cfg(desktop), que solo existe en tiempo de compilación de Tauri.
# `updater` descarga/verifica/instala la nueva versión; `process` reinicia la app.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

