[package]
name = "macup"
version = "0.2.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Binario con el nombre del producto para que el proceso (dock/Force Quit) sea
# "ZodHubPulse" también en `tauri dev`, no solo en el .app empaquetado.
[[bin]]
name = "ZodHubPulse"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
# Papelera del sistema (macOS/Windows/Linux) en vez de osascript+Finder.
trash = "5"
# SHA-256 en proceso, en vez de depender del binario `shasum` de macOS.
sha2 = "0.10"
# Notificaciones del sistema (aviso de disco lleno aunque la ventana esté oculta).
tauri-plugin-notification = "2"
# NO añadir `reqwest` aquí sin leer esto.
#
# Estuvo declarado en la v0.2.0 y la v0.2.2 para la suscripción a novedades, con
# `default-features = false`. Cargo UNIFICA las features de una misma crate en
# todo el grafo: como ninguna otra dependencia pedía las de por defecto, se
# apagaron para TODOS los que usan reqwest — incluido el cliente HTTP de
# `tauri-plugin-updater`, que es quien descarga `latest.json`. Se quedó sin la
# pila TLS de por defecto (`native-tls` y `hyper-tls` desaparecieron del
# Cargo.lock), y las actualizaciones automáticas dejaron de funcionar.
#
# Encima no hacía falta: `subscribe.rs` tiene el ENDPOINT vacío, así que la
# dependencia no daba ninguna función y sí rompía otra.
#
# Cuando haya endpoint de suscripción: usar `tauri-plugin-http` (comparte el
# cliente de Tauri) o declarar reqwest con su TLS completo y explícito, y
# DESPUÉS probar una actualización real de principio a fin antes de publicar.

# Actualizaciones automáticas (escritorio: macOS/Windows/Linux, no móvil).
# Se usa cfg(not(android/ios)) —que Cargo SÍ entiende al resolver dependencias—
# en vez de cfg(desktop), que solo existe en tiempo de compilación de Tauri.
# `updater` descarga/verifica/instala la nueva versión; `process` reinicia la app.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

